fixed spacing

--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ body {
 .vis-container {
   margin: 30px;
   margin-top: 100px;
-  height: 100%;
+  height: 86%;
 }
 
 h1.vis-title {
